[gd_scene format=3 uid="uid://bjv6y8b4ce3an"]

[ext_resource type="Script" uid="uid://d365bnrqpmn2h" path="res://Scripts/Components/Player/TargetsInRangeComponent.gd" id="1_eiow7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_eiow7"]
radius = 5.9174805

[node name="TargetsInRangeComponent" type="Node" unique_id=811212893]
script = ExtResource("1_eiow7")
metadata/_custom_type_script = "uid://d365bnrqpmn2h"

[node name="TargetsInRange" type="Area3D" parent="." unique_id=750300260]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetsInRange" unique_id=851071864]
shape = SubResource("CylinderShape3D_eiow7")
debug_color = Color(0, 0.8666667, 0.06432292, 0.41960785)

[connection signal="body_entered" from="TargetsInRange" to="." method="_on_targets_in_range_body_entered"]
[connection signal="body_exited" from="TargetsInRange" to="." method="_on_targets_in_range_body_exited"]
